# nytxw

./: .gitignore  .pre-commit-config.yaml  Pipfile  aggregate.py  answers.py  answers_test.py  botsay.py  cookie.py  env.py  env_test.py  format.py  format_test.py  initialize.py  last_unsolved.py  leaderboards.py  leaderboards.sh  leaderboards_test.py  param.py  pyproject.toml  sqlite_to_json.py  sqlite_to_json_test.py
testdata/: 2025-09-30.json  2025-09-30.txt  envrc  graphql-userdetails.json  leaderboards-2021.html  mini-2025.json  mini.aggregated.json  mini.sqlite3
